--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ p, h1, h2, h3, h4 {
 }
 
 /* ### LOADER ### */
-.loader__container {
+.loader {
   width: 100%;
   height: 100%;
   margin: auto;
@@ -166,8 +166,7 @@ p, h1, h2, h3, h4 {
   animation: loaderstop 1s linear 2.45s forwards;
   animation-timing-function: ease-in-out;
 }
-
-.loader {
+.loader__spinner {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -501,7 +500,7 @@ p, h1, h2, h3, h4 {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 0.74rem;
+  font-size: 0.87rem;
 }
 .submenu__price {
   font-weight: bold;
