--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,6 @@
 /* ### LOADER ### */
 
-.loader__container {
+.loader {
   width: 100%;
   height: 100%;
   margin: auto;
@@ -12,21 +12,21 @@
   align-items: center;
   animation: loaderstop 1s linear 2.45s forwards;
   animation-timing-function: ease-in-out;
-}
-.loader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 10px solid $primary-color;
-  border-top: 10px solid $secondary-color;
-  border-bottom: 10px solid $tertiary-color;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: loaderanim 2s linear 0.2s 1;
-  font-family: "Shrikhand", "cursive";
-  animation-timing-function: ease-in-out;
-}
+  &__spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 10px solid $primary-color;
+    border-top: 10px solid $secondary-color;
+    border-bottom: 10px solid $tertiary-color;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: loaderanim 2s linear 0.2s 1;
+    font-family: "Shrikhand", "cursive";
+    animation-timing-function: ease-in-out;
+  }
+  }
 
 .shutter {
   &__left {
