--- a/scss/_menus.scss
+++ b/scss/_menus.scss
@@ -125,7 +125,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    font-size: 0.74rem;
+    font-size: 0.87rem;
   }
   &__price {
     font-weight: bold;
